Bug 1690688 - enable video decoding in GPU process if the compositor supports D3D11. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D104778